2009-02-13  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (add_one_ap_menu_item): fix max signal strength calculation with
			 multiple APs of the same SSID (rh #475123)

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
		- (export_vpn_to_file_cb): fix export validtity checks (rh #480496)

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* icons/
		- Fix fallout from icon move; install icons to the right directories

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* icons/
		- Reorganize icons into directories for each size, and replace
			nm-no-connection and nm-device-wired icons with less-ugly
			ones from the Gnome icon theme (network-idle and
			network-offline)

2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/connection-editor.c
		- (nm_connection_editor_set_connection): add IPv4 tab for DSL and Mobile
			Broadband to allow users to override/amend DNS settings

2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): hide options for cases where they don't apply (like
			Manual addressing or DHCP for Mobile Broadband)

2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ppp.c
		- (ce_page_ppp_new): shorten PPP page tab name

2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): disable "DHCP Client ID" entry for VPN connections

2009-02-05  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- Update D-Bus rules for newer D-Bus, and deny attempts for non
			at_console/non-root processes to ask for a users'
			connections which they shouldn't need anyway

2009-02-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_device_check_unusable): add common code for checking
			whether a device is in a usable state and creating the
			menu item for it

	* src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c