@@ -1250,7 +1250,11 @@ static void nma_menu_show_cb (GtkWidget *menu, NMApplet *applet)
 	g_return_if_fail (menu != NULL);
 	g_return_if_fail (applet != NULL);
 
+#if GTK_CHECK_VERSION(2, 15, 0)
+	gtk_status_icon_set_tooltip_text (applet->status_icon, NULL);
+#else
 	gtk_status_icon_set_tooltip (applet->status_icon, NULL);
+#endif
 
 	if (!nm_client_get_manager_running (applet->nm_client)) {
 		nma_menu_add_text_item (menu, _("NetworkManager is not running..."));
@@ -1290,7 +1294,11 @@ nma_menu_deactivate_cb (GtkWidget *widget, NMApplet *applet)
 	g_idle_add_full (G_PRIORITY_LOW, (GSourceFunc) nma_menu_clear, applet, NULL);
 
 	/* Re-set the tooltip */
+#if GTK_CHECK_VERSION(2, 15, 0)
+	gtk_status_icon_set_tooltip_text (applet->status_icon, applet->tip);
+#else
 	gtk_status_icon_set_tooltip (applet->status_icon, applet->tip);
+#endif
 }
 
 /*
@@ -2003,7 +2011,11 @@ applet_update_icon (gpointer user_data)
 		g_string_free (tip, FALSE);
 	}
 
+#if GTK_CHECK_VERSION(2, 15, 0)
+	gtk_status_icon_set_tooltip_text (applet->status_icon, applet->tip);
+#else
 	gtk_status_icon_set_tooltip (applet->status_icon, applet->tip);
+#endif
 
 	return FALSE;
 }
