@@ -1,3 +1,9 @@
+2009-02-16  Alexander Sack  <asac@ubuntu.com>
+
+	* src/applet.c
+		- (nma_menu_show_cb, nma_menu_deactivate_cb, applet_update_icon):
+			use gtk_status_icon_set_tooltip_text() on GTK+ >= 2.15
+
 2009-02-13  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-device-wifi.c
